<resources>
    <string name="app_name">UPSIPTEEO</string>
    <string name="process">Consejo Nacional Electoral</string>
    <string name="fileProviderName">com.dpilaloa.upsipteeo.fileprovider</string>
    <string name="author">\@DarwinPilaloa</string>
    <string name="version">Versión</string>

    <string name="description_logo">logo</string>
    <string name="description_upload">upload</string>
    <string name="description_eye">eye</string>
    <string name="description_photo">foto</string>
    <string name="description_icon">icono</string>
    <string name="description_tab">Menu de opciones</string>

    <string name="admin_uid">-NLlwwtxoccKihdjL6yF</string>
    <string name="admin_one">TICS</string>
    <string name="admin_two">TECNICO SUPERVISOR</string>

    <string name="label_ced">* Cédula:</string>
    <string name="label_email">* Correo:</string>
    <string name="label_phone">* Celular:</string>
    <string name="label_password">* Clave:</string>
    <string name="label_name">* Nombre:</string>
    <string name="label_first_name">* Nombres:</string>
    <string name="label_last_name">* Apellidos:</string>
    <string name="label_rol">* Rol:</string>
    <string name="label_canton">* Cantón:</string>
    <string name="label_select_date">Selecciona la Fecha</string>
    <string name="label_select_time">Selecciona la Hora</string>
    <string name="label_reg_assistance">REGISTRO DE ASISTENCIA</string>
    <string name="label_not_result">No existen Resultados</string>
    <string name="label_count_result">0 Resultados</string>
    <string name="label_format_date">dd/mm/yyyy</string>
    <string name="label_format_time">hh:mm:ss</string>
    <string name="label_format_datetime">dd/mm/yyyy hh:mm:ss</string>
    <string name="label_upload_photo">Subir Foto</string>

    <string name="label_user_rol">ROL DE USUARIO</string>
    <string name="label_user_name">NOMBRE DEL USUARIO</string>
    <string name="label_user_ced">CEDULA DEL USUARIO</string>
    <string name="label_user_phone">TELEFONO DEL USUARIO</string>
    <string name="label_user_canton">CANTON DEL USUARIO</string>

    <string name="label_card_alert_canton">Canton de alerta</string>
    <string name="label_card_alert_site">Recinto o CDA</string>
    <string name="label_card_alert_message">Mensaje de alerta</string>
    <string name="label_card_alert_type">Tipo de alerta</string>
    <string name="label_card_alert_state">Estado de alerta</string>
    <string name="label_card_assistance_state">Asistencia</string>

    <string name="btn_login">Ingresar</string>
    <string name="btn_update_profile">Actualizar Perfil</string>
    <string name="btn_delete_profile">Eliminar Perfil</string>
    <string name="btn_logout">Cerrar Sesión</string>
    <string name="btn_add_user">Crear Usuario</string>
    <string name="btn_save_user">Guardar Usuario</string>
    <string name="btn_add_assistance">Agregar Asistencia</string>
    <string name="btn_save_assistance">Guardar Asistencia</string>
    <string name="btn_add_alert">¡Tengo una Alerta!</string>
    <string name="btn_show_alert">Ver Alertas</string>
    <string name="btn_show_map">Mapa de Alertas</string>
    <string name="btn_report_summary_users">Reporte Completo de Usuarios</string>

    <string name="menu_config">Configuración</string>

    <string name="tab_title_home">Inicio</string>
    <string name="tab_title_users">Usuarios</string>
    <string name="tab_title_profile">Perfil</string>

    <string name="title_report">Reportes</string>
    <string name="title_add_user">Agregar Usuario</string>
    <string name="title_image">Vista de Imagen</string>
    <string name="title_user">Usuario</string>
    <string name="title_assistance">Asistencia</string>
    <string name="title_alert">Alertas</string>
    <string name="title_map">Mapa con Alertas</string>
    <string name="title_showmap">Ver Mapa</string>

    <string name="input_search_user">Buscar Usuario</string>
    <string name="input_search_alert">Buscar Alerta</string>

    <string name="input_ced">Cédula de Identidad</string>
    <string name="input_name">Apellidos y Nombres</string>
    <string name="input_firstName">Nombres Completos</string>
    <string name="input_lastName">Apellidos Completos</string>
    <string name="input_email">Correo electrónico</string>
    <string name="input_phone">Celular o Whatsapp:</string>
    <string name="input_password">Clave de Acceso</string>

    <string-array name="rol">
        <item>Rol</item>
        <item>ARCHIVO DE ACTAS</item>
        <item>ASISTENTE CDA</item>
        <item>ASISTENTE CPE</item>
        <item>DIGITADOR</item>
        <item>FIRMAS DE ACTAS</item>
        <item>OPERADOR CDA</item>
        <item>OPERADOR CPE</item>
        <item>RECEPTOR DE ACTAS</item>
        <item>TECNICO SUPERVISOR</item>
        <item>TICS</item>
    </string-array>

    <string-array name="alertState">
        <item>Estado</item>
        <item>NUEVO</item>
        <item>EN CURSO</item>
        <item>FINALIZADO</item>
    </string-array>

    <string-array name="alertType">
        <item>Tipo</item>
        <item>EN CDA ASIGNADO</item>
        <item>KIT RECIBIDO</item>
        <item>KIT INCOMPLETO</item>
        <item>CDA INSTALADO</item>
        <item>TEST EXITOSO</item>
        <item>TEST CON ERROR</item>
        <item>USUARIO BLOQUEADO</item>
        <item>KIT GUARDADO</item>
        <item>CDA FINALIZADO</item>
        <item>SOLICITAR RETORNO A CPE</item>
        <item>EN CPE</item>
        <item>OTRO</item>
    </string-array>

    <string-array name="canton">
        <item>Cantones</item>
        <item>MACHALA</item>
        <item>PASAJE</item>
        <item>ARENILLAS</item>
        <item>HUAQUILLAS</item>
        <item>BALSAS</item>
        <item>EL GUABO</item>
        <item>PIÑAS</item>
        <item>PORTOVELO</item>
        <item>SANTA ROSA</item>
        <item>ZARUMA</item>
        <item>MARCABELI</item>
        <item>CHILLA</item>
        <item>ATAHUALPA</item>
        <item>LAS LAJAS</item>
    </string-array>

    <!-- Errors and Alerts Messages-->
    <string name="msgLogIn">Iniciando sesión</string>
    <string name="msgLogOut">Cerrando sesión</string>
    <string name="msgWelcome">Bienvenido</string>
    <string name="msgNotPermission">Permiso Negado</string>

    <string name="msgErrorUid">Ocurrió un error al obtener el UId</string>

    <string name="msgNotLogIn">Usuario y/o Clave Incorrecto</string>
    <string name="msgErrLogIn">Ocurrió un error al Iniciar Sesión</string>

    <string name="msgEmptyFields">Completa todos los campos</string>

    <string name="msgSearchDbError">Ocurrió un error al buscar los datos en la BD</string>
    <string name="msgGetDbError">Ocurrió un error al obtener los datos en la BD</string>

    <string name="msgUpdateProfile">Actualizando Perfil</string>
    <string name="msgCreatingProfile">Creando Perfil</string>
    <string name="msgDelProfile">Eliminando Perfil</string>
    <string name="msgExistProfile">Perfil Existente</string>
    <string name="msgSuccessCreateProfile">Perfil Creado Correctamente</string>
    <string name="msgSuccessUpdateProfile">Perfil Actualizado Correctamente</string>
    <string name="msgSuccessDelProfile">Perfil Eliminado Correctamente</string>
    <string name="msgNotCreateProfile">No se puede crear el perfil - Intente Nuevamente</string>
    <string name="msgNotUpdateProfile">No se puede actualizar el perfil - Intente Nuevamente</string>
    <string name="msgConfirmDelProfile">¿Estás seguro de eliminar el perfil?</string>
    <string name="msgNotDelProfile">No se puede eliminar el perfil - Intente Nuevamente</string>
    <string name="msgDelProfileWithErrors">Perfil Eliminado con errores</string>

    <string name="msgSuccessCreateAssistance">Asistencia Creada Correctamente</string>
    <string name="msgConfirmDelAssistance">¿Estás seguro de eliminar la asistencia?</string>
    <string name="msgNotDelAssistance">No se puede eliminar la asistencia - Intente Nuevamente</string>
    <string name="msgNotCreateAssistance">No se puede crear la asistencia - Intente Nuevamente</string>

    <string name="msgCreatingReport">Creando Reporte</string>
    <string name="msgSuccessReport">Reporte Creado Correctamente</string>
    <string name="msgNotCreateReport">No se puede crear el reporte - Intente Nuevamente</string>

    <string name="msgCopyPhone">Teléfono copiado al Portapapeles</string>
    <string name="msgDoubleClickToExit">Presione de nuevo para salir</string>

    <string name="msgAccept">Aceptar</string>
    <string name="msgCancel">Cancelar</string>
    <string name="msgNotReversible">¡Esta acción no es reversible!</string>

    <string name="msgViewPhoto">Ver Foto</string>
    <string name="msgUpdatePhoto">Actualizar Foto</string>
    <string name="msgUpdatingPhoto">Actualizando Foto</string>
    <string name="msgSuccessUpdatePhoto">Foto Actualizada Correctamente</string>
    <string name="msgNotDelPhoto">Ocurrió un error al Eliminar la Foto</string>
    <string name="msgNotUpdatePhoto">No se puede actualizar la foto - Intente Nuevamente</string>
    <string name="msgNotGetUrlPhoto">Ocurrió un error al obtener la url de la foto</string>
    <string name="msgNotUploadPhoto">Ocurrió un error al subir la foto</string>

    <string name="msgChooseOption">Selecciona una Opción</string>
    <string name="msgTitleInformation">Información</string>

    <string name="msgNotValEmail">Ingresa un correo válido</string>
    <string name="msgNotValName">Ingresa un nombre válido</string>
    <string name="msgNotValCed">Ingresa una cédula válida</string>
    <string name="msgNotValPhone">Ingresa un teléfono válido</string>

    <string name="spinnerDefaultCanton">Cantones</string>
    <string name="spinnerDefaultRol">Rol</string>

</resources>