<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/tab_title_home"
        app:titleTextColor="@color/white"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:src="@drawable/ic_logo"
            android:contentDescription="@string/description_logo" />

        <TextView
            android:id="@+id/textViewProcess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/process"
            android:textColor="@color/danger"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:text="@string/author"
            android:textColor="@color/gray"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic|bold"
            android:text="@string/version"
            android:textColor="@color/success"
            android:textSize="17sp"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:id="@+id/txt_version"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_add_alert"
            android:backgroundTint="@color/danger"
            android:textColor="@color/white"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:id="@+id/buttonAlert"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_show_alert"
            android:backgroundTint="@color/projectNight"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/buttonShowAlerts"
            />

    </LinearLayout>

</RelativeLayout>