<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="1dp"
    android:layout_marginBottom="1dp"
    android:layout_marginStart="2dp"
    android:layout_marginEnd="2dp"
    android:id="@+id/cardViewAlert"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="3dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_card_alert_type"
            android:textSize="15sp"
            android:textStyle="bold"
            android:id="@+id/cardType"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_card_alert_canton"
            android:textSize="15sp"
            android:id="@+id/cardCanton"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_card_alert_site"
            android:textSize="15sp"
            android:id="@+id/cardSite"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_user_name"
            android:textSize="12sp"
            android:textStyle="bold"
            android:id="@+id/cardName"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/cardDateTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_format_datetime"
                android:textSize="15sp"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/cardState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_card_alert_state"
                android:textSize="15sp"
                android:gravity="end"
                android:textStyle="bold"
                />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>