<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layout_informacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="25sp"
            android:textColor="@color/danger"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:textStyle="bold"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/description_logo"
            />

        <TextView
            android:id="@+id/text_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/process"
            android:textColor="@color/danger"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:text="@string/author"
            android:textColor="@color/gray"
            android:textSize="10sp"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            tools:ignore="SmallSp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="start"
            android:text="@string/label_ced"
            android:textSize="15sp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/textViewCed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/input_ced"
            android:inputType="text"
            android:paddingBottom="12dp"
            android:textColorHint="@color/gray"
            android:maxLength="10"
            android:autofillHints="no"
            android:textColor="@color/black"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="start"
            android:text="@string/label_password"
            android:textSize="15sp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:hint="@string/input_password"
            android:textColorHint="@color/gray"
            android:inputType="textPassword"
            android:maxLength="12"
            android:autofillHints="password"
            android:textColor="@color/black"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/btn_ingresar"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/btn_login"
            android:textColor="@color/white"
            android:backgroundTint="@color/projectNight"
            />

    </LinearLayout>

</RelativeLayout>