<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/tab_title_profile"
        app:titleTextColor="@color/white"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="15dp"
                        android:layout_weight="1"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/label_reg_assistance"
                            android:textStyle="bold"
                            android:textSize="15sp"
                            android:gravity="center"
                            />

                    </LinearLayout>

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:background="@color/success"
                        android:padding="10dp"
                        android:src="@drawable/ic_eye"
                        android:id="@+id/imgButtonShowAssistance"
                        android:contentDescription="@string/description_eye"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_user_rol"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:id="@+id/textViewRol"
                    android:gravity="center"
                    android:layout_margin="5dp"
                    />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_user_name"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:gravity="center"
                        android:layout_marginTop="10dp"
                        android:id="@+id/textViewName"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_user_ced"
                        android:textSize="15sp"
                        android:gravity="center"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:id="@+id/textViewCed"
                        />

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_upload"
                        android:background="@color/danger"
                        android:id="@+id/imageViewProfile"
                        android:contentDescription="@string/description_upload"
                        />

                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_upload_photo"
                        android:gravity="center"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_first_name"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        />

                    <EditText
                        android:id="@+id/editTextFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_firstName"
                        android:inputType="textPersonName"
                        android:maxLength="50"
                        android:textSize="20sp"
                        android:textColorHint="@color/gray"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:autofillHints="name" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_last_name"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        />

                    <EditText
                        android:id="@+id/editTextLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_lastName"
                        android:inputType="textEmailAddress"
                        android:maxLength="50"
                        android:textSize="20sp"
                        android:textColorHint="@color/gray"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:autofillHints="name" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_email"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        />

                    <EditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_email"
                        android:inputType="textEmailAddress"
                        android:maxLength="50"
                        android:textSize="20sp"
                        android:textColorHint="@color/gray"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:autofillHints="emailAddress" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_phone"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        />

                    <EditText
                        android:id="@+id/editTextPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_phone"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:textSize="20sp"
                        android:textColorHint="@color/gray"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:autofillHints="phone" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_canton"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        />

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:id="@+id/spinnerCanton"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_password"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true"
                        app:hintEnabled="false"
                        >

                        <EditText
                            android:id="@+id/editTextPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:hint="@string/input_password"
                            android:inputType="textPassword"
                            android:autofillHints="password" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/buttonUpdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:backgroundTint="@color/success"
                        android:text="@string/btn_update_profile"
                        android:textColor="@color/white"
                        />

                    <Button
                        android:id="@+id/buttonLogOut"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="20dp"
                        android:backgroundTint="@color/danger"
                        android:text="@string/btn_logout"
                        android:textColor="@color/white"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>